# knn-spatial-boost

./: Makefile  README.md  core.html  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
Brazil Real Estate Pricing/: research.html
knn_spatial_boost/: _modidx.py  core.py
nbs/: 00_core.ipynb  01_brazil_real_estate_pricing.ipynb  _quarto.yml  custom.yml  index.ipynb  nbdev.yml  sidebar.yml
nbs/Brazil Real Estate Pricing/: boosted_keras_nn.pickle  boosted_nn.pickle  boosted_rf.pickle  knn.pickle  nn.pickle  properati-BR-2016-11-01-properties-sell.csv  research.ipynb  rf.pickle  study.ipynb
