[tool.poetry]
name = "knn-spatial-boost"
version = "0.1.0"
description = "Boost any model to fit spatial data using KNN"
authors = ["Pedro Cleto <cl3t0.sh@gmail.com>"]
readme = "README.md"
packages = [{include = "knn_spatial_boost"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scikit-learn = "^1.3.2"
numpy = "^1.26.1"
pandas = "^2.1.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
nbdev = "^2.3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
